k8s-http/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: 3-tier-ns
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        replicaset: rs0.main
    spec:
      containers:
        - name: mongo
          image: mongo:4.2
          command:
            - "numactl"
            - "--interleave=all"
            - "mongod"
            - '--wiredTigerCacheSizeGB'
            - "0.1"
            - '--bind_ip'
            - '0.0.0.0'
            - '--replSet'
            - rs0
          ports:
            - containerPort: 27017
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          volumeMounts:
            - name: mg-pv-cont
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumeClaimTemplates:
        - metadata:
            name: mg-pv-cont
          spec:
            accessModes: ["ReadWriteOnce"]
            storageClassName: "gp2"
            resources:
              requests:
                storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: 3-tier-ns
  labels:
    app: mongo
    replicaset: rs0.main
spec:
  clusterIP: None
  selector:
    app: mongo
    replicaset: rs0.main
  ports:
    - port: 27017
      targetPort: 27017
