k8s-http/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: 3-tier-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
